# middleground

./: Cargo.toml
api_gateway/: Cargo.toml
api_gateway/src/: main.rs  routes.rs
auth/: Cargo.toml  README.md
auth/src/: dto.rs  error.rs  handlers.rs  jwt.rs  layer.rs  lib.rs  middleware.rs  models.rs  service.rs  services.rs
auth/src/auth_manager/: mod.rs  sb_manager.rs
auth/src/managers/: auth_manager.rs  mod.rs  sb_manager.rs
auth/src/models/: authenticator.rs  mod.rs  sb_authenticator.rs
cli/: Cargo.toml  README.md
cli/src/: auth.rs  main.rs  shellcmd.rs  state.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs
db/src/queries/: conversations.rs  messages.rs  mod.rs
entity/: Cargo.toml
entity/src/: lib.rs  source.rs  user.rs
matchmaking/: Cargo.toml
matchmaking/src/: lib.rs  main.rs  matchmaker.rs  promptqueue.rs
moderation/: Cargo.toml
moderation/src/: lib.rs  rating_system.rs  strike_system.rs
shared/: Cargo.toml
shared/src/: lib.rs  state.rs
shared/src/types/: conversation.rs  mod.rs  source.rs
source_validation/: Cargo.toml  Cargo.toml.txt
source_validation/src/: lib.rs  main.rs
ws/: Cargo.toml  README.md
ws/src/: error.rs  handler.rs  lib.rs  messages.rs  session.rs
