[workspace]
resolver = "2"
members = [
	"api_gateway",
	"auth", 
  "shared",
	"source_validation"
]

[workspace.package]
version = "0.1.0"
authors = []
# documentation = ""

[workspace.dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
