[package]
name = "auth"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

base64 = "0.22.1"
jsonwebtoken = "9.3.1"
supabase-auth = "0.10.13"

shared = { path = "../shared" }
async-trait = "0.1.88"
