[package]
name = "auth"
edition = "2024"
version.workspace = true
authors.workspace = true
description = "JWT-based authentication service with OTP support"

[dependencies]
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

async-trait = "0.1.88"
jsonwebtoken = "9.3.1"
supabase-auth = "0.10.13"

[dev-dependencies]
base64 = "0.22.1"
tokio-test = "0.4.4"
