[package]
name = "cli"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
reqwest = { workspace = true, features = ["cookies", "json"] }
rustyline = "17.0.2"
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.28.0"
