[package]
name = "ws"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
chrono.workspace = true
futures = "0.3.31"
redis = { workspace = true, features = ["aio"] }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

shared = { path = "../shared" }
